# telegram-channel-msg-eraser

./: .env.example  .gitignore  AUTHORS  LICENSE  Procfile  README.md  setup.cfg
tgeraser/: __version__.py  core.py  purge.py  service.py  session_string.py
