[metadata]
name = razakim-channel-eraser
version = attr: tgeraser.__version__.VERSION
description = Hosted Telegram channel purge bot with slow resumable deletion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://srazakim.netlify.app
author = Savadogo RAZAKIM
author_email = srazakim@gmail.com
maintainer = Razakim tech
maintainer_email = srazakim@gmail.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
keywords = telegram, channel, purge, koyeb, delete messages
license = MIT License
license_file = LICENSE

[options]
zip_safe = False
packages = find:
python_requires = >=3.10, <4
install_requires =
    docopt
    pyaes
    pyasn1
    rsa
    telethon>=1.32.0

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    tgeraser = tgeraser.core:entry
    tgeraser-service = tgeraser.service:entry
    tgeraser-session = tgeraser.session_string:entry
